--- a/3_Implementation/Makefile
+++ b/3_Implementation/Makefile
@@ -1,9 +1,27 @@
-#TargetName : Dependencies
+#Target : Dependencies
 #<TAB>commands
+	
+PROJ_NAME=code
+SRC=src1/code_main.c\
+ src1/code.c\
+ 
+#To check if the OS is Windows or Linux and set the executable file extenstion
+ifdef OS
+	RM=del /q
+	FixPath= $(subst /,\,$1)
+	EXEC = exe
+else
+    ifeq ($(shell uname),Linux)
+   	RM=rm -rf
+	FixPath= $1
+	EXEC = out
+	endif
+endif
 
-Build : code.c code_main.c
-	gcc code.c code_main.c -o code.out
+INC =-Icode.h\
 
-Run	:	Build
-		code.out
-		./code.out
+Build : $(SRC)
+	gcc $(SRC) $(INC) -o $(call FixPath,$(PROJ_NAME).$(EXEC)) -lm
+
+Run : Build
+	./$(call FixPath,$(PROJ_NAME).$(EXEC))
